# reesaurora

./: .gitignore  .gitmodules  .mypy.ini  .travis.yml  README.md  README.rst  ReesSerginekoIvanov.py  RunRees.py  pyproject.toml  rees.py  rees_model.py  requirements.txt  setup.cfg  setup.py
.github/workflows/: ci.yml
archive/: .travis.yml
data/: SergienkoIvanov.h5
reesaurora/: __init__.py  auxillary_rees.py  plots.py  rees_model.py
reesaurora/tests/: test.m  test_all.py
test/: test.m  test.py
tests/: test.py  test_all.py
