[metadata]
name = reesaurora
version = 1.0.5
author = Michael Hirsch, Ph.D
author_email = scivision@users.noreply.github.com
url = https://github.com/space-physics/reesaurora
description = Rees-Sergienko-Ivanov Model of Earth ionosphere.
keywords =
  ionosphere
  aurora
classifiers =
  Development Status :: 4 - Beta
  Environment :: Console
  Intended Audience :: Science/Research
  Operating System :: OS Independent
  Programming Language :: Python :: 3
  Topic :: Scientific/Engineering :: Atmospheric Science
license_files =
  LICENSE.txt
long_description = file: README.md
long_description_content_type = text/markdown

[options]
python_requires = >= 3.7
include_package_data = True
packages = find:
install_requires =
  python-dateutil
  numpy
  scipy
  xarray
  msise00
  gridaurora

[options.extras_require]
tests =
  pytest
lint =
  flake8
  flake8-bugbear
  flake8-builtins
  flake8-blind-except
  mypy
plots =
  matplotlib
  seaborn
